maze.lessons.maze.island.IslandMaze.scala.error
Escaper:13: error: not found: value get
	if (get(Y) == 0) {
            ^